# pyscaffoldext-pre-commit-ruff

./: .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish-package.yml
docs/: index.rst
src/pyscaffoldext/pre_commit_ruff/: __init__.py  extension.py
src/pyscaffoldext/pre_commit_ruff/templates/: __init__.py  pre-commit-ruff-config.template  pyproject_toml.template
tests/: conftest.py  test_custom_extension.py
