# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = pyscaffoldext-pre-commit-ruff
description = PyScaffold extension to use Ruff with pre-commit.
author = John D. Fisher
author_email = jdfenw@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/jfishe/pyscaffoldext-pre-commit-ruff
# Add here related links, for example:
project_urls =
    Documentation = https://pyscaffoldext-pre-commit-ruff.readthedocs.io/
    Source = https://github.com/jfishe/pyscaffoldext-pre-commit-ruff
    Changelog = https://pyscaffoldext-pre-commit-ruff.readthedocs.io/en/latest/changelog.html
    Tracker = https://github.com/jfishe/pyscaffoldext-pre-commit-ruff/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    pyscaffold>=4.6,<5.0a0

[options.package_data]
* = *.template

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install pyscaffoldext-pre-commit-ruff[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    tox
    pre-commit
    setuptools_scm
    virtualenv
    configupdater
    pytest
    pytest-cov
    pytest-xdist

[options.entry_points]
pyscaffold.cli =
    pre_commit_ruff = pyscaffoldext.pre_commit_ruff.extension:PreCommitRuff
# Add here console scripts like:
# console_scripts =
#     script_name = pyscaffoldext.pre_commit_ruff.module:function
# For example:
# console_scripts =
#     fibonacci = pyscaffoldext.pre_commit_ruff.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov pyscaffoldext.pre_commit_ruff --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[mypy]
exclude = (?x)(
    \.tox/
    | build/
    | dist/
    | docs/
    )
ignore_missing_imports = True
follow_imports = silent

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.6
package = pre_commit_ruff
extensions =
    cirrus
    custom_extension
    namespace
    no_skeleton
    pre_commit
namespace = pyscaffoldext
